[tool.poetry]
name = "ersilia"
version = "0.1.46"
description = "A hub of AI/ML models for open source drug discovery and global health"
license = "GPLv3"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>"]
readme = "README.md"
homepage = "https://ersilia.io"
repository = "https://github.com/ersilia-os/ersilia"
documentation = "https://ersilia.io/model-hub"
keywords = [
    "drug-discovery",
    "machine-learning",
    "ersilia",
    "open-science",
    "global-health",
    "model-hub",
    "infectious-diseases",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "ersilia" }]
include = [
    "ersilia/hub/content/metadata/*.txt",
    "ersilia/io/types/examples/*.tsv",
]

[tool.poetry.dependencies]
python = ">=3.8"
inputimeout = "^1.0.4"
emoji = "^2.8.0"
validators = [{ version = "~0.21.0", python = ">=3.8" }]
psutil = ">=5.9.0"
h5py = "^3.7.0"                                             
loguru = ">=0.7.0"                                          
PyYAML = "^6.0.1"
dockerfile-parse = "^2.0.1"
tqdm = "^4.66.1"
click = "^8.1.7"
docker = "^7.1.0"
boto3 = "^1.28.40"
requests = "^2.31.0"
numpy = "<=1.26.4"
aiofiles = "<=24.1.0"
aiohttp = ">=3.10.11"
nest_asyncio = "<=1.6.0"
redis = ">=5.1"
pytest = { version = "^7.4.0", optional = true }
pytest-asyncio = { version = "<=0.24.0", optional = true }
pytest-benchmark = { version = "<=4.0.0", optional = true }
fuzzywuzzy = { version = "^0.18.0", optional = true }
sphinx = { version = ">=6.0.0", optional = true }           # for minimum version and support for Python 3.10
jinja2 = { version = "^3.1.2", optional = true }
scipy = { version = "*", optional = true }
nox = { version = "*", optional = true }
rich = { version = "*", optional = true }
ruff = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }

[tool.poetry.extras]
# Instead of using poetry dependency groups, we use extras to make it pip installable
docs = ["sphinx", "jinja2"]
test = ["pytest", "pytest-asyncio", "pytest-benchmark", "nox", "rich", "fuzzywuzzy", "scipy", "ruff", "pre-commit"]
#all = [docs, test]

[tool.poetry.scripts]
ersilia = "ersilia.cli:cli"
bentoml = "ersilia.setup.requirements:check_bentoml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
